# 03DEVOPS-2025

./: .gitignore
F_Brain/: README.md  docker-compose.yml
F_Brain/.github/workflows/: cd.yml  ci.yml
F_Brain/client/: Dockerfile  package.json  vite.config.js
F_Brain/client/src/: App.jsx
F_Brain/client/src/pages/: CompanyList.jsx  HomePage.jsx
F_Brain/client/src/pages/Admin/: Dashboard.jsx
F_Brain/client/src/pages/Company/: Dashboard.jsx  Register.jsx
F_Brain/client/src/pages/Student/: Profile.jsx  Register.jsx
F_Brain/monitoring/: grafana.ini  prometheus.yml
F_Brain/proxy/: default.conf
F_Brain/proxyDF/: Dockerfile  default.conf
F_Brain/server/: pyproject.toml
F_Brain/server/server_config/: celery.py  settings.py  urls.py
