[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    {name = "Merveille19", email = "merveillelontchi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    # Tu peux ajouter ici tes dépendances, exemple :
    "django",
    "celery",
    "django-prometheus",
    "django-celery-results",
    "django-celery-beat",
    "psycopg2-binary"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

